--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>test</title>
 </head>
 <body>
   Hello <%= locals.text %>
-
 </body>
 </html>
